# habit_tracker_cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/wiki/: CLI-Reference.md  Configuration.md  Contributing.md  Data-Export-Import.md  Home.md  Installation.md  Shell-Integration.md  TUI-Guide.md
src/habit_tracker/: __init__.py  __main__.py  cli.py  colors.py  config.py  models.py  schedule.py  shell.py  stats.py  storage.py
src/habit_tracker/render/: heatmap.py  stats_panel.py  summary.py
src/habit_tracker/tui/: app.py  commands.py  screens.py  widgets.py
tests/: test_migrations.py  test_phase1.py  test_schedule.py  test_stats.py  test_storage.py  test_tui.py  test_widgets.py
