[project]
name = "habit-tracker"
version = "0.1.0"
description = "Terminal habit tracker with GitHub-style heatmaps, streaks, and interactive TUI"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Rohithn14", email = "rohithnamavaram1@gmail.com" }
]
keywords = ["habit", "tracker", "terminal", "cli", "tui", "heatmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
requires-python = ">=3.11"
dependencies = [
    "platformdirs>=4.10.0",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.urls]
Homepage = "https://github.com/Rohithn14/habit_tracker_cli"
Repository = "https://github.com/Rohithn14/habit_tracker_cli"
Issues = "https://github.com/Rohithn14/habit_tracker_cli/issues"
Changelog = "https://github.com/Rohithn14/habit_tracker_cli/blob/main/CHANGELOG.md"

[project.scripts]
habit = "habit_tracker.cli:app"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
